--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -388,7 +388,7 @@ ul.list-group{
 	border-bottom: 1px solid #fff;
 }
 .bgazul5{
-    padding: 25px;
+    padding: 39px 1px 48px 54px;
 	background: rgba(137, 209, 243, 0.28);
 	border-bottom: 1px solid #fff;
 	&.envioPoliza{
