--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -16,6 +16,7 @@ $gris4:#CCCCCC;
 $gris5:#D8D8D8;
 $gris6:#F2F2F2;
 $gris7:#4a4a4a;
+$gris8:#6C6F73;
 
 $h4Family:sans-serif;
 $h4Size:19px;
@@ -87,13 +88,6 @@ h4{
 	font-size:$h4Size;
 	color:$h4Color;
 }
-h2.subt{
-	font-family:$h2SubFamily ;
-	font-weight:$h2SubW ;
-	font-size:$h2SubSize ;
-	color:$h2SubColor ;
-
-}
 .regular-checkbox {
     display: none;
 }
@@ -164,8 +158,13 @@ h2.subt{
 		border-top: 1px solid #000;
 	}
 	h4{
-	    font-size: 22px;
     	font-weight: 600;
+	}
+	h3{
+		font-family:$h2SubFamily ;
+		font-weight:$h2SubW ;
+		font-size:16px ;
+		color:$h2SubColor ;
 	}
 	h2{
 		font-size: 20px;
@@ -190,6 +189,9 @@ h2.subt{
 .bgazul1{
 	background-color: $azul2;
 	border-bottom: 1px solid #fff;
+	border-radius: 7px;
+	-moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
 	&.poliza{
 		color:#fff;
 		h2{
@@ -238,14 +240,11 @@ h2.subt{
 	}
 	p.labelgral{
 		color:$azul6;
+		font-size: 14px;
 	}	
 	p.dato{
 		color:#fff;
-	}
-	p.dato.wig{
-		color: #fff;
 		font-size: 18px;
-		font-weight: 700;
 	}
 }
 .bgazul3{
@@ -268,6 +267,27 @@ h2.subt{
 		ul li,p{
 			color:#fff;
 			font-size: 18px;
+		}
+	}
+}
+.bgazul5{
+    padding: 39px 1px 48px 1px;
+	background: rgba(137, 209, 243, 0.28);
+	border-bottom: 1px solid #fff;
+	&.envioPoliza{
+		h4{
+		    font-size: 22px;
+	    	font-weight: 600;
+		}
+		h2{
+			font-size: 20px;
+		}
+		label{
+			font-weight: 200;
+    		color: #777;
+		}
+		p{
+			font-weight: 600;
 		}
 	}
 }
@@ -336,7 +356,6 @@ h2.subt{
 	font-weight:$h2SubW ;
 	font-size:$h2SubSize ;
 	color:$h2SubColor ;
-
 }
 .labelgral{
 	color: #000;
@@ -387,18 +406,7 @@ h2.subt{
 		}
 	}
 }
-.bqblanco{
-	background: #fff;
-	bottom: 7px;
-    right: 10px;
-}
 .triangulo {
-     width: 0; 
-     height: 0; 
-    border-left: 48px solid #fff;
-    border-top: 39px solid transparent;
-    border-bottom: 40px solid transparent;
-    position: absolute;
     transform: rotate(90deg);
     top: 308px;
     left: 166px;
@@ -410,7 +418,7 @@ h2.subt{
 .regular-radio + label {
     -webkit-appearance: none;
     background-color: #fff;
-    border: 2px solid #009ee5;
+    border: 2px solid $azul2;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
     padding: 9px;
     border-radius: 50px 50px 50px 50px;
@@ -427,10 +435,9 @@ h2.subt{
 	border-radius: 50px 50px 50px 50px;
 	-moz-border-radius: 50px 50px 50px 50px;
 	-webkit-border-radius: 50px 50px 50px 50px;
-
     position: absolute;
     top: 3px;
-    background: #009ee5;
+    background: $azul2;
     text-shadow: 0px;
     left: 3px;
     font-size: 32px;
@@ -439,18 +446,25 @@ h2.subt{
 .regular-radio:checked + label {
     background-color: #fff;
     color: #99a1a7;
-    border: 2px solid #009ee5;
+    border: 2px solid $azul2;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1), inset 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .regular-radio + label:active,
 .regular-radio:checked + label:active {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
-	border: 2px solid #009ee5;
+	border: 2px solid $azul2;
 }
 .labelgral{
 	font-family: $pLabelFamily;
 	font-size:$pLabelSize;
 	color: $pLabelColor;
+	font-weight: $pLabelW;
+	white-space: inherit;
+}
+.labelgral2{
+	font-family: $pLabelFamily;
+	font-size: 14px;
+	color: $gris8;
 	font-weight: $pLabelW;
 	white-space: inherit;
 }
@@ -569,26 +583,25 @@ ul.list-group{
 	    background-color: $azul2;
 	    border-color: $azul2;
 	    & h4{
-
 	    }
 	}
 	& .btn-info .triangulo{
-		top: 90px;
+		top: 93px;
 	    margin: 0 auto;
 	    width: 0;
 	    height: 0;
 	    border-right: 14px solid transparent;
-	    border-left: 30px solid #006ec1;
+	    border-left: 25px solid #006ec1;
 	    border-top: 19px solid transparent;
 	    border-bottom: 20px solid transparent;
 	    position: absolute;
-	    left: 88px;
+	    left: 90px;
 	}
 
 	& ul.list-group{
 	    border: 3px solid $azul2;
 		& .triangulo{
-			top: 144px;
+			top: 134px;
 		    margin: 0 auto;
 		    width: 0;
 		    height: 0;
@@ -596,7 +609,7 @@ ul.list-group{
 		    border-top: 14px solid transparent;
 		    border-bottom: 14px solid transparent;
 		    position: absolute;
-		    left: 90px;
+		    left: 102px;
 		    z-index: 10;
 		}
 		& .triangulo2{
@@ -613,14 +626,71 @@ ul.list-group{
 		}
 	}
 }
-.planes .triangulo{
-		top: -20px;
+.planes{
+	 .triangulo1{
+		top: -10px;
 		margin: 0 auto;
 		width: 0;
 		height: 0;
-		border-right: 20px solid transparent;
-		border-left: 20px solid transparent;
+		border-top: 20px solid transparent;
+		border-left: 20px solid #fff;
 		border-bottom: 20px solid transparent;
 		position: absolute;
-		right: 170px;
+		transform: rotate(90deg);
+		right: 486px;
+		} 
+}
+#myModalDmc .modal-body {
+    border: 4px solid $verde;
+    .regular-checkbox + label {
+    background-color: #fff;
+    border: 2px solid $verde;
+	}
+	.regular-checkbox:checked + label {
+	    background-color: #fff;
+	    border: 4px solid $verde;
+	    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+	    color: $verde;
+	}
+	.regular-checkbox:checked + label:after {
+	    content: '\2714';
+	    font-size: 14px;
+	    position: absolute;
+	    top: -8px;
+	    left: 3px;
+	    color: $verde;
+	}
+	.big-checkbox + label {
+	    padding: 19px;
+	}
+    .big-checkbox:checked + label:after {
+    font-size: 40px;
+    left: 4px;
+    color: $verde;
+	}
+    h2{
+    	color: $azul2;
+    }
+    h4{
+    	color: $azul3;
+    }
+}
+.bqblanco{
+	background:$azul5;
+    right: 10px;
+    color: #fff;
+    h4{
+    	color:#fff;
+    	font-size: 20px;
+    }
+    h6{
+    	font-size: 16px;
+		color: #FFFFFF;
+    }
+}
+.contrata{
+	h2.subt{
+		font-weight: 700;
+		color: #fff;
+	}
 }
