--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
 		meta(name="viewport",content="width=device-width, initial-scale=1")
 		meta(name="description",content="")
 		meta(name="author",content="")
-		title Cotizador de...
+		title Cotizador de vida
 		link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
 		link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 		link(rel="stylesheet",href="style.css")
@@ -22,23 +22,23 @@ html(lang="en")
 				.row
 					.col-md-offset-1.col-md-2.step.active
 						.ico.registra
-						h3.text-center registro
+						h3.text-center Registra
 						span
 					.col-md-2.step.complete
 						.ico.cotiza
-						h3.text-center cotiza
+						h3.text-center Cotiza
 						span
 					.col-md-2.step
 						.ico.valida
-						h3.text-center cuestionario
+						h3.text-center Valida
 						span
 					.col-md-2.step
 						.ico.contrata
-						h3.text-center contrata
+						h3.text-center Contrata
 						span
 					.col-md-2.step
 						.ico.poliza
-						h3.text-center póliza
+						h3.text-center Recibe tu Póliza
 						span
 		hr
 		h1 registro
@@ -49,10 +49,10 @@ html(lang="en")
 				.row
 					.col-md-offset-1.col-md-11
 						.col-md-12
-							h2.subt Para conocer la opción de 
+							h2.subt Seguros Bancomer lo que más nos importa eres tú, por lo cual te sugerimos que  
 								span 
-									strong Vida 
-								|que tenemos para ti, es necesario aceptar el Aviso de privacidad y posteriormente completar los siguientes campos:
+									strong leas y aceptes 
+								| el Aviso de Privacidad que tenemos para el manejo de tus datos personales, y posteriormente te solicitamos completar los siguientes datos:
 							input(type="checkbox",id="checkbox-1" class="regular-checkbox big-checkbox")
 							label(for="checkbox-1")
 							a#AvPriv(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalAvPriv', data-trigger='hover') Aviso de Privacidad
@@ -598,9 +598,7 @@ html(lang="en")
 									option(value="opcion-5") e
 						.col-md-12
 							br
-							.col-md-6.text-right
-								button CONTINUAR DESPUES
-							.col-md-6.text-left
+							.col-md-12.text-center
 								button(type='button', data-toggle='modal', data-target='#myModal2') CONTINUAR
 								.space
 					.col-md-4.text-center
